package electron and fix scrollbars, overlapping elements #49 #48

--- a/css/sketch.css
+++ b/css/sketch.css
@@ -134,10 +134,12 @@ Simulation Equation & Setting layer
 #simulatorInputContainer {
   justify-content: space-between;
   padding: 10px;
+  overflow: auto;
 }
 
 #equationContainer {
-
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 #simulatorInputContainer, #equationContainer {
@@ -157,6 +159,7 @@ Simulation Equation & Setting layer
 
 #hidebar {
   display: flex;
+  flex-shrink: 0;
   align-items: center;
   vertical-align: middle;
   justify-content: center;
@@ -183,8 +186,8 @@ Simulation Equation & Setting layer
   padding: 5px;
   background-color: #4F4A41;
   display:flex;
+  flex-shrink: 0;
   flex-direction: column;
-  flex: 1;
 }
 
 #equationdiv select {
@@ -324,6 +327,7 @@ Simulation Equation & Setting layer
   background-color: #4F4A41;
   display: flex;
   flex-direction: row;
+  flex: 1;
 }
 
 .can {
@@ -460,6 +464,7 @@ color: white;
   background-color: #4F4A41;
   display: flex;
   justify-content: center;
+  flex: 0;
 }
 
 #NernstButton, #GoldmanButton, #equilibrateButton {
@@ -489,6 +494,7 @@ color: white;
 #equilibrateButton {
   font-size: 1.1em;
   margin: 10px 0px;
+  flex: 0 0 auto;
 }
 
 #equilibrateButton, #answer {
